# mcdevops1

./: .gitignore  CMakeLists.txt  README.rst
src/: cli.cpp  version.h
src/api/: api.hpp
src/core/: CommandLine.hpp  Makefile  configure.hpp  core_check.cpp  item.cpp  item.h  logging.cpp  logging.hpp
test/: CMakeLists.txt  test_cli.cpp
